fix: skeleton mobile height

--- a/src/components/SkeletonCard/SkeletonCard.module.css
+++ b/src/components/SkeletonCard/SkeletonCard.module.css
@@ -20,3 +20,10 @@
     background-position: 0 50%;
   }
 }
+
+
+@media screen and (max-width: 612px) {
+  .skeleton {
+    height: 97px;
+  }
+}
